--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fix": "eslint src --fix",
     "format": "prettier --write \"/./**/*.{html,vue,ts,js,json,md}\"",
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
-    "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix"
+    "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/core": "^7.22.1",
