--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "fix": "eslint src --fix",
-    "format": "prettier --write \"/./**/*.{html,vue,ts,js,json,md}\"",
+    "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
+    "lint:all": "eslint src/**/*.{ts,vue} --cache --fix & stylelint src/**/*.{css,scss,vue} --cache --fix",
     "prepare": "husky install"
   },
   "dependencies": {
     "@babel/core": "^7.22.1",
-    "prettier": "^2.8.8",
+    "@element-plus/icons-vue": "^2.1.0",
+    "element-plus": "^2.3.5",
     "vue": "^3.2.47",
     "webpack": "^5.84.1"
   },
@@ -27,15 +29,25 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^9.14.1",
+    "husky": "^8.0.0",
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
-    "stylelint": "^15.6.2",
+    "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "scss": "^0.2.4",
+    "stylefmt": "^6.0.3",
+    "stylelint": "^15.6.3",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-order": "^6.0.3",
