feat: 添加路由，axios二次封装

--- a/.env.production
+++ b/.env.production
@@ -2,11 +2,11 @@
  # @Author: liuxintao
  # @Date: 2023-06-04 11:21:24
  # @LastEditors: liuxintao
- # @LastEditTime: 2023-06-04 11:22:13
+ # @LastEditTime: 2023-06-11 17:10:17
  # @FilePath: /vue_vite/.env.production
  # @Description: 生产环境变量
 ### 
 NODE_ENV = 'production'
 VITE_APP_TITLE = '生产环境'
 VITE_APP_BASE_API = '/prod-api'
-VITE_SERVE = 'http://xxx.com'
+VITE_SERVE = 'http://localhost:3000'
