--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
  # @Author: liuxintao
  # @Date: 2023-06-04 11:14:55
  # @LastEditors: liuxintao
- # @LastEditTime: 2023-06-04 11:18:24
+ # @LastEditTime: 2023-06-11 17:10:02
  # @FilePath: /vue_vite/.env.development
  # @Description: 开发环境变量
 ### 
@@ -10,4 +10,4 @@
 NODE_ENV = 'development'
 VITE_APP_TITLE = '开发环境'
 VITE_APP_BASE_API = '/dev-api'
-VITE_SERVE = 'http://xxx.com'
+VITE_SERVE = 'http://localhost:3000'
