--- a/.env.test
+++ b/.env.test
@@ -2,11 +2,11 @@
  # @Author: liuxintao
  # @Date: 2023-06-04 11:20:34
  # @LastEditors: liuxintao
- # @LastEditTime: 2023-06-04 11:22:44
+ # @LastEditTime: 2023-06-11 17:10:30
  # @FilePath: /vue_vite/.env.test
  # @Description: 测试环境变量
 ### 
 NODE_ENV = 'test'
 VITE_APP_TITLE = '测试环境'
 VITE_APP_BASE_API = '/test-api'
-VITE_SERVE = 'http://xxx.com'
+VITE_SERVE = 'http://localhost:3000'
