--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
     "esbuild": "^0.17.19",
-    "mockjs": "^1.1.0",
     "vue": "^3.2.47",
+    "vue-router": "^4.2.2",
     "webpack": "^5.84.1"
   },
   "devDependencies": {
@@ -64,7 +64,6 @@
     "stylelint-webpack-plugin": "^4.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
-    "vite-plugin-mock": "^2.9.8",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.4.2"
   }
